Adding DoestUserExist API
Swagger Documentation: http://localhost:4000/api-docs/\#/Patient/post_doesPatientExist
